syntax = "proto3";

package ras.encoding;

import "google/protobuf/descriptor.proto";


option go_package = "github.com/v8platform/rasbinary";

extend google.protobuf.FieldOptions {

  EncodingFieldOptions field = 475223888;
}

extend google.protobuf.OneofOptions {
  EncodingFieldOptions oneof_field = 475223888;
}

message EncodingFieldOptions {
  optional string encoder = 1;
  optional int32 order = 2;
  optional int32 version = 3;
  optional int32 type_field = 7;
  string type_url = 8;
  bool ignore = 9;
  optional int32 size_field = 10;

}

extend google.protobuf.EnumValueOptions {
  // Ссылка на тип связанного сообщения
  string type_url = 475223891;
}
