syntax = "proto3";

package ras.messages.v1;


import "ras/encoding/ras.proto";
import "google/protobuf/any.proto";

option csharp_namespace = "ras.messages.v1";
option go_package = "github.com/v8platform/protoc-gen-go-ras/tests/gen/ras/messages/v1";


enum MessageType {
  GET_AGENT_ADMINS_REQUEST = 0;
  GET_AGENT_ADMINS_RESPONSE = 1;
  GET_CLUSTER_ADMINS_REQUEST = 2;
  GET_CLUSTER_ADMINS_RESPONSE = 3;
  REG_AGENT_ADMIN_REQUEST = 4;
  REG_CLUSTER_ADMIN_REQUEST = 5;
  UNREG_AGENT_ADMIN_REQUEST = 6;
  UNREG_CLUSTER_ADMIN_REQUEST = 7;
  AUTHENTICATE_AGENT_REQUEST = 8; // Auth on agent
  AUTHENTICATE_REQUEST = 9; // Auth on cluster
  ADD_AUTHENTICATION_REQUEST = 10; // Auth on infobase
  GET_CLUSTERS_REQUEST = 11;
  GET_CLUSTERS_RESPONSE = 12;
  GET_CLUSTER_INFO_REQUEST = 13;
  GET_CLUSTER_INFO_RESPONSE = 14;
  REG_CLUSTER_REQUEST = 15;
  REG_CLUSTER_RESPONSE = 16;
  UNREG_CLUSTER_REQUEST = 17;
  GET_CLUSTER_MANAGERS_REQUEST = 18;
  GET_CLUSTER_MANAGERS_RESPONSE = 19;
  GET_CLUSTER_MANAGER_INFO_REQUEST = 20;
  GET_CLUSTER_MANAGER_INFO_RESPONSE = 21;
  GET_WORKING_SERVERS_REQUEST = 22;
  GET_WORKING_SERVERS_RESPONSE = 23;
  GET_WORKING_SERVER_INFO_REQUEST = 24;
  GET_WORKING_SERVER_INFO_RESPONSE = 25;
  REG_WORKING_SERVER_REQUEST = 26;
  REG_WORKING_SERVER_RESPONSE = 27;
  UNREG_WORKING_SERVER_REQUEST = 28;
  GET_WORKING_PROCESSES_REQUEST = 29;
  GET_WORKING_PROCESSES_RESPONSE = 30;
  GET_WORKING_PROCESS_INFO_REQUEST = 31;
  GET_WORKING_PROCESS_INFO_RESPONSE = 32;
  GET_SERVER_WORKING_PROCESSES_REQUEST = 33;
  GET_SERVER_WORKING_PROCESSES_RESPONSE = 34;
  GET_CLUSTER_SERVICES_REQUEST = 35;
  GET_CLUSTER_SERVICES_RESPONSE = 36;
  CREATE_INFOBASE_REQUEST = 37;
  CREATE_INFOBASE_RESPONSE = 38;
  UPDATE_INFOBASE_SHORT_REQUEST = 39;
  UPDATE_INFOBASE_REQUEST = 40;
  DROP_INFOBASE_REQUEST = 41;
  GET_INFOBASES_SHORT_REQUEST = 42;
  GET_INFOBASES_SHORT_RESPONSE = 43;
  GET_INFOBASES_REQUEST = 44;
  GET_INFOBASES_RESPONSE = 45;
  GET_INFOBASE_SHORT_INFO_REQUEST = 46;
  GET_INFOBASE_SHORT_INFO_RESPONSE = 47;
  GET_INFOBASE_INFO_REQUEST = 48;
  GET_INFOBASE_INFO_RESPONSE = 49;
  GET_CONNECTIONS_SHORT_REQUEST = 50;
  GET_CONNECTIONS_SHORT_RESPONSE = 51;
  GET_INFOBASE_CONNECTIONS_SHORT_REQUEST = 52;
  GET_INFOBASE_CONNECTIONS_SHORT_RESPONSE = 53;
  GET_CONNECTION_INFO_SHORT_REQUEST = 54;
  GET_CONNECTION_INFO_SHORT_RESPONSE = 55;
  GET_INFOBASE_CONNECTIONS_REQUEST = 56;
  GET_INFOBASE_CONNECTIONS_RESPONSE = 57;
  reserved 58 to 63; // Unknown messages types
  DISCONNECT_REQUEST = 64;
  GET_SESSIONS_REQUEST = 65;
  GET_SESSIONS_RESPONSE = 66;
  GET_INFOBASE_SESSIONS_REQUEST = 67;
  GET_INFOBASE_SESSIONS_RESPONSE = 68;
  GET_SESSION_INFO_REQUEST = 69;
  GET_SESSION_INFO_RESPONSE = 70;
  TERMINATE_SESSION_REQUEST = 71;
  GET_LOCKS_REQUEST = 72;
  GET_LOCKS_RESPONSE = 73;
  GET_INFOBASE_LOCKS_REQUEST = 74;
  GET_INFOBASE_LOCKS_RESPONSE = 75;
  GET_CONNECTION_LOCKS_REQUEST = 76;
  GET_CONNECTION_LOCKS_RESPONSE = 77;
  GET_SESSION_LOCKS_REQUEST = 78;
  GET_SESSION_LOCKS_RESPONSE = 79;
  reserved 80; // Unknown messages type
  APPLY_ASSIGNMENT_RULES_REQUEST = 81;
  REG_ASSIGNMENT_RULE_REQUEST = 82;
  REG_ASSIGNMENT_RULE_RESPONSE = 83;
  UNREG_ASSIGNMENT_RULE_REQUEST = 84;
  GET_ASSIGNMENT_RULES_REQUEST = 85;
  GET_ASSIGNMENT_RULES_RESPONSE = 86;
  GET_ASSIGNMENT_RULE_INFO_REQUEST = 87;
  GET_ASSIGNMENT_RULE_INFO_RESPONSE = 88;
  GET_SECURITY_PROFILES_REQUEST = 89;
  GET_SECURITY_PROFILES_RESPONSE = 90;
  CREATE_SECURITY_PROFILE_REQUEST = 91;
  DROP_SECURITY_PROFILE_REQUEST = 92;
  GET_VIRTUAL_DIRECTORIES_REQUEST = 93;
  GET_VIRTUAL_DIRECTORIES_RESPONSE = 94;
  CREATE_VIRTUAL_DIRECTORY_REQUEST = 95;
  DROP_VIRTUAL_DIRECTORY_REQUEST = 96;
  GET_COM_CLASSES_REQUEST = 97;
  GET_COM_CLASSES_RESPONSE = 98;
  CREATE_COM_CLASS_REQUEST = 99;
  DROP_COM_CLASS_REQUEST = 100;
  GET_ALLOWED_ADDINS_REQUEST = 101;
  GET_ALLOWED_ADDINS_RESPONSE = 102;
  CREATE_ALLOWED_ADDIN_REQUEST = 103;
  DROP_ALLOWED_ADDIN_REQUEST = 104;
  GET_EXTERNAL_MODULES_REQUEST = 105;
  GET_EXTERNAL_MODULES_RESPONSE = 106;
  CREATE_EXTERNAL_MODULE_REQUEST = 107;
  DROP_EXTERNAL_MODULE_REQUEST = 108;
  GET_ALLOWED_APPLICATIONS_REQUEST = 109;
  GET_ALLOWED_APPLICATIONS_RESPONSE = 110;
  CREATE_ALLOWED_APPLICATION_REQUEST = 111;
  DROP_ALLOWED_APPLICATION_REQUEST = 112;
  GET_INTERNET_RESOURCES_REQUEST = 113;
  GET_INTERNET_RESOURCES_RESPONSE = 114;
  CREATE_INTERNET_RESOURCE_REQUEST = 115;
  DROP_INTERNET_RESOURCE_REQUEST = 116;
  INTERRUPT_SESSION_CURRENT_SERVER_CALL_REQUEST = 117;
  GET_RESOURCE_COUNTERS_REQUEST = 118;
  GET_RESOURCE_COUNTERS_RESPONSE = 119;
  GET_RESOURCE_COUNTER_INFO_REQUEST = 120;
  GET_RESOURCE_COUNTER_INFO_RESPONSE = 121;
  REG_RESOURCE_COUNTER_REQUEST = 122;
  UNREG_RESOURCE_COUNTER_REQUEST = 123;
  GET_RESOURCE_LIMITS_REQUEST = 124;
  GET_RESOURCE_LIMITS_RESPONSE = 125;
  GET_RESOURCE_LIMIT_INFO_REQUEST = 126;
  GET_RESOURCE_LIMIT_INFO_RESPONSE = 127;
  REG_RESOURCE_LIMIT_REQUEST = 128;
  UNREG_RESOURCE_LIMIT_REQUEST = 129;
  GET_COUNTER_VALUES_REQUEST = 130;
  GET_COUNTER_VALUES_RESPONSE = 131;
  CLEAR_COUNTER_VALUE_REQUEST = 132;
  GET_COUNTER_ACCUMULATED_VALUES_REQUEST = 133;
  GET_COUNTER_ACCUMULATED_VALUES_RESPONSE = 134;
  GET_AGENT_VERSION_REQUEST = 135;
  GET_AGENT_VERSION_RESPONSE = 136;
}